--- a/client/src/components/TempFormat.scss
+++ b/client/src/components/TempFormat.scss
@@ -2,4 +2,8 @@
   margin-right: 8px;
   margin-left: 8px;
   display: inline-block;
+
+  .selected-temp {
+    background-color: aquamarine !important;
+  }
 }
