font for clock, popovers

--- a/client/src/components/TempFormat.scss
+++ b/client/src/components/TempFormat.scss
@@ -6,4 +6,9 @@
   .selected-temp {
     background-color: aquamarine !important;
   }
+
+  .temp-switch {
+    // width: 100%;
+    // height: 100%;
+  }
 }
