--- a/client/src/components/LocationCard.scss
+++ b/client/src/components/LocationCard.scss
@@ -1,9 +1,28 @@
+@font-face {
+  font-family: digitalDismay;
+  src: url("../fonts/digital-dismay.regular.otf");
+}
+
 .LocationCard {
+  margin: 8px;
   .header-card {
     background-color: aquamarine;
     margin: 8px auto;
     display: inline-block;
     min-width: 300px;
+
+    .time {
+      margin-top: 16px;
+
+      .numbers {
+        font-family: digitalDismay, sans-serif;
+        font-size: 1.6em;
+      }
+
+      .ampm {
+        font-size: 0.8em;
+      }
+    }
 
     table {
       margin: 0 auto;
