types deploy prepare

--- a/client/src/components/SearchBar.scss
+++ b/client/src/components/SearchBar.scss
@@ -1,5 +1,11 @@
 .SearchBar {
   .buttons {
     display: inline-block;
+    margin: 4px;
+  }
+
+  .inputs {
+    display: inline-block;
+    vertical-align: middle;
   }
 }
